Attempt to simplify things slightly